k8s/fastfood-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastfood-deployment
  labels:
    app: fastfood-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastfood-deployment
  template:
    metadata:
      labels:
        app: fastfood-deployment
    spec:
      containers:
        - name: c-fastfood-deployment
          image: nathancordeiro0/fastfood-api:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
