k8s/ngrok-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngrok-deployment
  labels:
    app: ngrok-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngrok-deployment
  template:
    metadata:
      labels:
        app: ngrok-deployment
    spec:
      containers:
        - name: c-ngrok-deployment
          image: ngrok/ngrok:latest
          args:
            - start
            - --config
            - /etc/ngrok/ngrok.yml
            - --log=stdout
            - fastfood
          volumeMounts:
          - name: ngrok-config
            mountPath: /etc/ngrok
      volumes:
        - name: ngrok-config
          configMap:
            name: ngrok-config
