k8s/fastfood-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastfood-service
  labels:
    app: fastfood-service
spec:
  type: ClusterIP
  selector:
    app: fastfood-deployment
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
