k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres-service
spec:
  type: ClusterIP
  selector:
    app: postgres-deployment
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
