k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastfood-ingress
  labels:
    app: fastfood-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "fastfood.local.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fastfood-service
              port:
                number: 80
